fix(cows): make gender indicator visible

--- a/src/components/CowCard/CowCard.sass
+++ b/src/components/CowCard/CowCard.sass
@@ -20,9 +20,6 @@
       align-items: baseline
       display: flex
 
-      svg
-        padding-left: 1em
-
 .CowCard-scroll-anchor
   display: block
   height: 0
